Removed unnecessary API endpoints. Updated Mule Shell Session API. Added JPA facet. Fixed JUnit5 dependency with SureFire plugin.
