# mule-shell-server/main-java/net/sf/zoftwhere/mule/resource/ExpressionResource.java
@@ -1,27 +1,39 @@
 package net.sf.zoftwhere.mule.resource;
 
+import com.google.inject.Inject;
 import jdk.jshell.JShell;
 import net.sf.zoftwhere.mule.api.ExpressionApi;
 import net.sf.zoftwhere.mule.model.ExpressionModel;
 import net.sf.zoftwhere.mule.shell.JShellManager;
 import net.sf.zoftwhere.mule.shell.UUIDBuffer;
 
-import javax.inject.Inject;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import java.util.Random;
+import java.util.UUID;
 
 public class ExpressionResource implements ExpressionApi {
 
 	@Inject
-	public JShellManager manager;
+	private JShellManager manager;
+
+	@Inject
 	private UUIDBuffer buffer;
 
 	public ExpressionResource() {
-		buffer = new UUIDBuffer(new Random(0));
 	}
 
 	@Override
+	public Response postExpression(String sessionId, String expressionType, ExpressionModel expression) {
+		final var sessionUUID = UUID.fromString(sessionId);
+
+		final var entity = new ExpressionModel();
+		entity.setInput(expression.getInput());
+		entity.setOutput("Done.");
+
+		return Response.ok(entity, MediaType.APPLICATION_JSON_TYPE).build();
+	}
+
 	public Response putExpression(String sessionId, ExpressionModel body, String expressionType) {
 
 		int i = 0;
@@ -35,7 +47,7 @@ public class ExpressionResource implements ExpressionApi {
 			}
 		}
 
-		JShell shell = manager.newJShell(new UUIDBuffer(new Random())).getValue();
+		JShell shell = manager.newJShell(buffer).getValue();
 
 		return Response.ok("{'size':" + manager.size() + " }", MediaType.APPLICATION_JSON_TYPE).build();
 	}
